<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
    android:minWidth="120dp"
    android:minHeight="100dp"
    android:minResizeHeight="100dip"
    android:minResizeWidth="120dip"
    android:updatePeriodMillis="0"
    android:previewImage="@mipmap/ic_launcher"
    android:initialLayout="@layout/item_list"
    android:resizeMode="horizontal|vertical"
    android:configure="com.example.yosef.bakingapp.widget.BakingAppWidgetConfigurationActivity"
    android:widgetCategory="home_screen">
</appwidget-provider>